# ColorMate

./: .gitignore  COPYING  Cargo.toml  README.md  com.github.ckruse.ColorMate.json  de.wwwtech.ColorMate.json  meson.build
.github/workflows/: main.yml
data/: colormate.gresource.xml  com.github.ckruse.ColorMate.appdata.xml.in  com.github.ckruse.ColorMate.desktop.in  com.github.ckruse.ColorMate.gschema.xml  de.wwwtech.ColorMate.appdata.xml.in  de.wwwtech.ColorMate.desktop.in  de.wwwtech.ColorMate.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: window.ui
po/: POTFILES  meson.build
snap/: snapcraft.yaml
src/: Application.vala  Window.vala  colormate.gresource.xml  main.rs  main.vala  meson.build  static_resources.rs.in  window.rs  window.ui
