[package]
name = "colormate"
version = "0.1.0"
edition = "2018"

[dependencies]
fancy-regex = "0.4.0"
lazy_static = "1.4.0"
colorsys = "0.6.0"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_24_9"]

[dependencies.gdk]
version = "0.13.2"
features = ["v3_24"]

[dependencies.gdk-pixbuf]
version = "0.9.0"
features = ["v2_40"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_64"]

[dependencies.glib]
version = "0.10.2"
features = ["v2_64"]

[dependencies.gettext-rs]
version = "0.5.0"
features = ["gettext-system"]
